2025-09-25  Charlie Zender  <zender@uci.edu>

	* NCO 5.3.6-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.3.6-alpha01: Alien: Earth';git push
	git tag -a 5.3.6-alpha01 -m 'Functionally identical to 5.3.5 except fxm';git push --tags

	* NCO 5.3.5 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.3.5: Playground';git push
	git tag -a 5.3.5 -m 'all: quiet dbg output, --var_lst = -v; ncks: add mask_a/b dgn; ncclimo/ncremap: Fix OpenMP w/ GCC, add par doc, dgn bad map row/col, --npo refactor, plev xtr fl';git push --tags

	* Preliminary updates for 5.3.5-final

2025-09-24  Charlie Zender  <zender@uci.edu>

	* NCO 5.3.5-beta01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.3.5-beta01: Ally Maz and Nicole Wild';git push
	git tag -a 5.3.5-beta01 -m 'all: quiet dbg output, --var_lst = -v; ncks: add mask_a/b dgn; ncclimo/ncremap: Fix OpenMP w/ GCC, add par doc, dgn bad map row/col, --npo refactor, plev xtr fl';git push --tags

	* Add regridding and map-generation scaling tests to parallelism section of Confluence page

2025-09-18  Charlie Zender  <zender@uci.edu>

	* Add English translations of Conservation and Consistency to map-checker output

2025-09-13  Charlie Zender  <zender@uci.edu>

	* NCO 5.3.5-alpha04 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.3.5-alpha04: Guava cream-cheese danish';git push
	git tag -a 5.3.5-alpha04 -m 'all: Fix OpenMP with GCC at DOE HPCs; ncremap/ncclimo: update docs; ncks: __GNUC__ token not __GNUG__';git push --tags

	* OpenMP now works as expected on MacOS, Linux, and at DOE HPCCs

	* #undef NCO_OPENMP_DEFINED before using it for OpenMP pragmas

	* Refactor OpenMP diagnostics for vertical and horizontal

2025-09-12  Charlie Zender  <zender@uci.edu>

	* ncremap: quiet renormalization configuration debug output

2025-09-11  Charlie Zender  <zender@uci.edu>

	* Update ncremap/ncclimo self-documentation

	* Clarify --thr_nbr option in ncremap Confluence page
